src/test/ui/error-should-say-copy-not-pod.stderr
error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
  --> $DIR/error-should-say-copy-not-pod.rs:6:5
   |
LL |     check_bound("nocopy".to_string());
   |     ^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `std::string::String`
   |
note: required by `check_bound`
  --> $DIR/error-should-say-copy-not-pod.rs:3:1
   |
LL | fn check_bound<T:Copy>(_: T) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
